Last fixes for the PII Guardrail