@@ -2,31 +2,30 @@ package dev.jettro.blogpromotor.agent;
 
 import com.embabel.agent.api.tool.callback.AfterLlmCallContext;
 import com.embabel.agent.api.tool.callback.BeforeLlmCallContext;
+import com.embabel.agent.core.AgentProcess;
 import com.embabel.agent.core.Blackboard;
 import com.embabel.chat.Message;
 import com.embabel.chat.UserMessage;
-import dev.jettro.blogpromotor.presidio.AnalyzeRequest;
 import dev.jettro.blogpromotor.presidio.AnalyzeResult;
 import dev.jettro.blogpromotor.presidio.PresidioAnalyzerClient;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.Instant;
 import java.util.List;
 
+import static dev.jettro.blogpromotor.agent.PIIUserInputGuardRail.PII_ANALYZE_RESULT_KEY;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.verifyNoInteractions;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class PIIToolLoopTransformerTest {
-
-    @Mock
-    private PresidioAnalyzerClient presidioAnalyzerClient;
 
     @Mock
     private BeforeLlmCallContext beforeLlmCallContext;
@@ -37,31 +36,41 @@ class PIIToolLoopTransformerTest {
     @Mock
     private Blackboard blackboard;
 
+    @Mock
+    private AgentProcess agentProcess;
+
     private PIIToolLoopTransformer transformer;
-    private final List<String> piiTypes = List.of("PERSON", "EMAIL_ADDRESS");
+    private MockedStatic<AgentProcess> mockedAgentProcess;
 
     @BeforeEach
     void setUp() {
-//        transformer = new PIIToolLoopTransformer(presidioAnalyzerClient, piiTypes, blackboard);
-        // TODO: This will break, need to think about this.
-        transformer = new PIIToolLoopTransformer(presidioAnalyzerClient, piiTypes);
+        mockedAgentProcess = mockStatic(AgentProcess.class);
+        mockedAgentProcess.when(AgentProcess::get).thenReturn(agentProcess);
+        lenient().when(agentProcess.getBlackboard()).thenReturn(blackboard);
+
+        transformer = new PIIToolLoopTransformer();
+    }
+
+    @AfterEach
+    void tearDown() {
+        mockedAgentProcess.close();
     }
 
     @Test
     void transformBeforeLlmCall_withEmptyHistory_returnsEmptyHistory() {
         when(beforeLlmCallContext.getHistory()).thenReturn(List.of());
+        when(blackboard.get(PII_ANALYZE_RESULT_KEY)).thenReturn(List.of());
 
         List<Message> result = transformer.transformBeforeLlmCall(beforeLlmCallContext);
 
         assertThat(result).isEmpty();
-        verifyNoInteractions(presidioAnalyzerClient);
     }
 
     @Test
     void transformBeforeLlmCall_withNoPII_returnsOriginalHistory() {
         Message message = new UserMessage("Hello, world!", "User", Instant.now());
         when(beforeLlmCallContext.getHistory()).thenReturn(List.of(message));
-        when(presidioAnalyzerClient.analyze(any(AnalyzeRequest.class))).thenReturn(List.of());
+        when(blackboard.get(PII_ANALYZE_RESULT_KEY)).thenReturn(List.of());
 
         List<Message> result = transformer.transformBeforeLlmCall(beforeLlmCallContext);
 
@@ -76,20 +85,21 @@ class PIIToolLoopTransformerTest {
         when(beforeLlmCallContext.getHistory()).thenReturn(new java.util.ArrayList<>(List.of(message)));
 
         // Note: PIIToolLoopTransformer sorts results by start index descending to avoid shifting issues.
-        // John Doe. (start 48, end 56)
+        // My email is john.doe@example.com and my name is John Doe.
         // john.doe@example.com (start 12, end 32)
+        // John Doe. (start 48, end 56)
         List<AnalyzeResult> analyzeResults = List.of(
                 new AnalyzeResult("EMAIL_ADDRESS", 12, 32, 1.0, null),
                 new AnalyzeResult("PERSON", 48, 56, 1.0, null)
         );
-        when(presidioAnalyzerClient.analyze(any(AnalyzeRequest.class))).thenReturn(analyzeResults);
+        when(blackboard.get(PII_ANALYZE_RESULT_KEY)).thenReturn(analyzeResults);
 
         List<Message> result = transformer.transformBeforeLlmCall(beforeLlmCallContext);
 
         assertThat(result).hasSize(1);
         String expectedText = "My email is <EMAIL_ADDRESS> and my name is <PERSON>.";
-        assertThat(result.get(0).getContent()).isEqualTo(expectedText);
-        assertThat(result.get(0).getRole().getDisplayName()).isEqualTo("User");
+        assertThat(result.getFirst().getContent()).isEqualTo(expectedText);
+        assertThat(result.getFirst().getRole().getDisplayName()).isEqualTo("User");
     }
 
     @Test
